fix: v4.1.0 - full audit of the code base
Result of a review of all 41 source files. Nothing here adds a feature for its
own sake; it makes the existing ones behave as documented.

Security
- MiniMessage injection: substituted values (appeal text, reasons, names) were
  parsed as MiniMessage, so a player could put a working <click:run_command>
  into staff-facing output. Values are escaped now.
- Statistics GUI was recognised by window title, so a renamed shulker box opened
  the staff leaderboard. Menus use an InventoryHolder and re-check the permission.
- banhammer.bypass was honoured only by the hammer, not by the commands.
- banhammer.ipban was declared but never checked anywhere.
- A rejected webhook URL was logged in full, including its token.

Correctness
- An unreadable duration became "permanent" instead of an error, so a typo like
  "/mute X 1w" issued a permanent punishment. Parsing now separates "permanent"
  from "not understood"; the duplicate parser in PunishmentCommands is gone.
- The warning count had no filter and no reset, so every warning past the
  threshold triggered another auto-ban.
- /unmute did nothing without a database.
- IP-ban records had no IP: the address was read after the kick.
- A failed jail was reported as success and stored as an active record.
- BanList was modified from async threads (broken outright on Folia).
- A failing database write let the same expiry be re-announced every 60s.
- Releasing from an unloaded world threw and left the player stuck in jail.
- MySQL never registered its driver, and shade had no ServicesResourceTransformer.
- No schema migration existed; a new column only surfaced as "no such column".
- Roughly a dozen database chains had no error handler at all.

Changed
- Punishments accept a CommandSender, so console and RCON can use them.
  API break: getStaff() on the three events now returns CommandSender.
- Bans are keyed on the account (profile) instead of the name.
- /appeal works against any active pu